--- a/04-transcriptomics_figure.Rmd
+++ b/04-transcriptomics_figure.Rmd
@@ -203,7 +203,7 @@ names(gsea_xlsx) <-
   c(gsea_res_ex_filt_w$gs_name %>% str_replace(":", "_") %>% str_c("_NES"),
     gsea_res_ex_filt_w$gs_name %>% str_replace(":", "_") %>% str_c("_padj"))
 
-gsea_xlsx %>% openxlsx::write.xlsx("data/gsea_res.xlsx", overwrite = T)
+# gsea_xlsx %>% openxlsx::write.xlsx("data/gsea_res.xlsx", overwrite = T)
 ```
 
 ```{r gsea-vis}
@@ -266,6 +266,19 @@ gsea_ad_p <-
                                             "NL/NN_derm",
                                             "NL/NN_FT")) %>% 
   mutate(
+    contrast = case_when(
+      contrast == "AD-LSvsAD-NL" ~ "LSvsNL",
+      contrast == "AD-LSvsCO" ~ "LSvsHC",
+      contrast == "AD-NLvsCO" ~ "NLvsHC",
+      contrast == "LSvsNN" ~ "LSvsHC",
+      contrast == "NLvsNN" ~ "NLvsHC",
+      contrast == "Adult_LSvsAdult_NL" ~ "Adult_LSvsNL",
+      contrast == "Adult_NNvsChildren_NN" ~ "Adult_HCvsChildren_HC",
+      contrast == "Children_LSvsChildren_NL" ~ "Children_LSvsNL",
+      contrast == "LS/NL_derm" ~ "LSvsNL_dermis",
+      contrast == "LS/NL_epi" ~ "LSvsNL_epidermis",
+      contrast == "LS/NL_FT" ~ "LSvsNL_full tissue",
+      TRUE ~ contrast),
     des = des %>% str_replace("interleukin|Interleukin", "IL"),
     cat = case_when(
     pathway %in% c("PID_IL23_PATHWAY",
@@ -319,7 +332,7 @@ vp_all <-
       (1|gender) + (1|biopsy_area) + (1|rna_quality) + (1|visit),    
     colData(se) %>% as_tibble()
     )
-variancePartition::plotVarPart(vp_all)
+# variancePartition::plotVarPart(vp_all)
 ```
 
 ```{r VP core gene, cache=TRUE, dpi=600, fig.width=12}
@@ -404,20 +417,20 @@ top_cytokine_boxplot <-
 
 # consolidate 3 plots
 vp_core_p <- 
-  ((vpcore_violin / top_cytokine_boxplot) | cytokine_vp_P) + 
-  plot_annotation(tag_levels = "a") & 
-                  theme(plot.tag = element_text(face = "bold"))
+  ((vpcore_violin / top_cytokine_boxplot) | cytokine_vp_P)
 vp_core_p
 
 # save the plot (Not execuate)
-# png("figure/vp_core.png", width = 480*20, height= 480*12, res = 600)
+# png("figure/vp_core.png", width = 480*20*1.2, height= 480*12*1.2, res = 600)
 # vp_core_p
 # dev.off()
 ```
 
 ## Hair
 ```{r generate heatmap for krtap, cache=TRUE}
-se_krtap <- readr::read_rds("data/se_krtap.rds")
+se_krtap <- readr::read_rds("data/se_krtap.rds") %>% 
+  mutate(skin_type = skin_type %>% as.character(),
+         skin_type = ifelse(skin_type == "NN", "HC", skin_type))
 KRTAP_filt_d <- 
   se_krtap %>% assay(2) %>% log1p() %>% t() %>% scale() %>% t()
 sample_site_color <- 
@@ -443,7 +456,6 @@ heatmap_annotation <-
                                                           title_gp = gpar(fontsize = 16),
                                                           labels_gp = gpar(fontsize = 16))
                                    ))
-
 # grid_height = unit(1, "cm"), grid_width = unit(5, "mm")
                                                
 heatmap <- ComplexHeatmap::Heatmap(KRTAP_filt_d,
@@ -462,11 +474,10 @@ heatmap <- ComplexHeatmap::Heatmap(KRTAP_filt_d,
 draw(heatmap, heatmap_legend_side = "right",
      annotation_legend_side = "top", merge_legend = FALSE)
 
-
-png("figure/heatmap_KRTAP.png", width = 480*4.5, height = 480*6, res=300)
-draw(heatmap, heatmap_legend_side = "right",
-     annotation_legend_side = "top", merge_legend = FALSE)
-dev.off()
+# png("figure/heatmap_KRTAP.png", width = 480*6.5, height = 480*5.5, res=300)
+# draw(heatmap, heatmap_legend_side = "right",
+#      annotation_legend_side = "top", merge_legend = FALSE)
+# dev.off()
 ```
 
 
