--- a/06-transcriptomics_appendix.Rmd
+++ b/06-transcriptomics_appendix.Rmd
@@ -207,6 +207,11 @@ gse_reg %>%
   knitr::kable(caption = "Enrichment results for transcription factor and microRNA targets")
 ```
 
+## Novel targes
+
+```{r data - IL34, IL37, CSF1, CSF1R}
+
+```
 
 
 
