--- a/05-transcriptomics_manuscript.Rmd
+++ b/05-transcriptomics_manuscript.Rmd
@@ -14,7 +14,7 @@ pacman::p_load(tibble, dplyr, tidyr, readr, stringr, ggplot2, purrr,
                DESeq2, limma, edgeR, MuSiC, convert, 
                patchwork)
 knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = FALSE)
-pca_color <- c("LS" = "#eb2d0c", "NL" = "#eb740c", "NN" = "#91cf60")
+pca_color <- c("LS" = "#eb2d0c", "NL" = "#eb740c", "HC" = "#91cf60")
 core_n <- future::availableCores()
 register(MulticoreParam(ifelse(core_n <= 8, core_n - 2, core_n -6)))
 ```
