--- a/03-transcriptomics_data_cleaning.Rmd
+++ b/03-transcriptomics_data_cleaning.Rmd
@@ -11,7 +11,7 @@ pacman::p_load(tibble, dplyr, tidyr, readr, stringr, ggplot2, purrr,
 knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = FALSE, fig.align = 'center')
 pca_color <- c("LS" = "#eb2d0c", "NL" = "#eb740c", "NN" = "#91cf60")
 core_n <- future::availableCores()
-register(MulticoreParam(ifelse(core_n <= 8, core_n - 2, core_n -6)))
+register(MulticoreParam(ifelse(core_n <= 8, core_n - 2, core_n / 2)))
 ```
 
 ```{r load data}
@@ -282,10 +282,69 @@ save(DGE_space %>% select(contrast, res_shrink), "data/dge_space.rds")
 ```
 
 ## Differential expressed genes: time
+
+```{r load and clean data}
+se <- readr::read_rds("data/se.rds")
+se <- se[,!is.na(se$visit_quarter)]
+```
+
+
+### Stability over time
+```{r dge_time_alone}
+dge_time_alone <-
+  expand_grid(
+    skin_type = colData(se)$skin_type %>% unique,
+    t = c("visit", "visit_quarter")
+    ) %>% 
+  mutate(se = map(skin_type, ~ se[, se$skin_type == .x]),
+         f = paste("~", t),
+         deseq = map2(se, f, ~ DESeqDataSet(.x, design = .y %>% as.formula)),
+         deseq = map(deseq, ~ DESeq(.x, test = "LRT", reduced = ~ 1)),
+         deseq = map(deseq, ~ results(.x) %>% as_tibble(rownames = "gene_name")))
+
+dge_time_design <-
+  expand_grid(
+  skin_type = colData(se)$skin_type %>% unique,
+  t = c("visit", "visit_quarter")
+  ) %>% 
+  mutate(name = paste(skin_type, t, sep = "_"))
+  
+dge_time_result <-
+  lapply(1:nrow(dge_time_design), function(index){
+    se <- se[,se$skin_type == dge_time_design$skin_type[index]]
+    f <- paste("~", dge_time_design$t[index])
+    deseq <- DESeqDataSet(se, design = as.formula(f))
+    deseq <- DESeq(deseq, test = "LRT", reduced = ~ 1, 
+                   parallel = T, BPPARAM = MulticoreParam(4))
+    deseq <- results(deseq)
+    deseq <- as_tibble(deseq, rownames = "gene_name")
+  })
+names(dge_time_result) <- dge_time_design$name
+
+dge_time_result_wN <-
+  map2_dfr(dge_time_result,
+     dge_time_design$name,
+     ~ mutate(.x, name = .y) %>% 
+       filter(padj < .05, abs(log2FoldChange) > 1)) 
+
+g_t <- dge_time_result_wN$gene_name %>% unique
+writeLines(g_t, "data/enrichr_gt.txt")
+
+library(enrichR)
+setEnrichrSite("Enrichr")
+dbs <- c("Human_Gene_Atlas", "ARCHS4_Tissues")
+
+enriched <- 
+  enrichr(g_t, dbs)  
+```
+
+
+
 ### Visit as time
 
 ```{r model time (visit), eval=FALSE, cache=TRUE}
 
+# se <- readr::read_rds("data/se.rds")
 # clean the environment for parallel 
 # rm(list = ls()[ls() != "se"])
 # LS vs NL
